--- a/apps/tv/package.json
+++ b/apps/tv/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.58.0",
+    "@saladillo/core": "*",
     "@vercel/og": "^0.8.5",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
