fix: add tsconfig paths for @saladillo/core in all apps

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@saladillo/core": [
+        "../../packages/core"
       ]
     }
   },
