--- a/apps/tv/tsconfig.json
+++ b/apps/tv/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@saladillo/core": [
+        "../../packages/core"
       ]
     }
   },
