--- a/apps/pc/package.json
+++ b/apps/pc/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "ls -R ../../packages/core && next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -15,7 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.58.0",
-    "@saladillo/core": "file:../../packages/core",
+    "@saladillo/core": "*",
     "@vercel/og": "^0.8.5",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
